<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_aruco_teleop</name>
  <version>0.0.1</version>
  <description>TurtleBot3 Teleoperation mit ArUco + RealSense</description>

  <maintainer email="caiomarcasmenz.cmm+contact@gmail.com">CaioMarcasMenz</maintainer>
  <license></license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
